# 2025-p7-nissan

./: .gitignore  README.md  docker-compose.yaml  main.tf
todo/: pyproject.toml
todo/views/: routes.py
