[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Nissan Dookeran <12583+nissan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
celery = {extras = ["sqs"], version = "^5.5.1"}
redis = "^5.2.1"
boto3 = "^1.37.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
